fix: clock overflow

--- a/client/src/style/pages/_home-page.scss
+++ b/client/src/style/pages/_home-page.scss
@@ -150,6 +150,7 @@ section {
   align-items: center;
   width: 542px;
   height: 542px;
+  overflow: hidden;
 }
 
 .hour__circle,
